Changes to gulpfile

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,13 +2,14 @@ doctype html
 html(ng-app)
    head
        title= title
+       link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css')
        link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
        link(rel='stylesheet', href='/bower_components/bootstrap-material-design/dist/css/ripples.css')
        link(rel='stylesheet', href='/bower_components/bootstrap-material-design/dist/css/material-wfont.css')
        link(rel='stylesheet', href='/stylesheets/layout.css')
 
    body
-       include base/header.jade
+       include header
        .max-width
            block content
        block footer
