--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
-extends layout
+extends layout.jade
 
 block content
-  h1= title
-  p Welcome to #{title}
+    section.landing
+        #landing-heading.max-width
+            h1 MY
+            h1.orange HORROR
+            h1 IS YOUR
+            h1.green COMEDY
