--- a/views/header.jade
+++ b/views/header.jade
@@ -1,10 +1,10 @@
 header
-    nav.navbar.navbar-default
+    nav.navbar.navbar-default.navbar-fixed-top
         .max-width
             .navbar-header
                 button.navbar-toggle(type='button' data-toggle='collapse' data-target='.navbar-responsive-collapse')
                     span.mdi-navigation-menu
-                a.navbar-brand(href='#') Brand
+                a.navbar-brand(href='#') SNAKE
             .navbar-collapse.collapse.navbar-responsive-collapse
                 ul.nav.navbar-nav
                     li.active: a(href='javascript:void(0)') About
