--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,8 @@
 extends layout.jade
 
 block content
-    section.landing
-        #landing-heading.max-width
-            h1 MY
-            h1.orange HORROR
-            h1 IS YOUR
-            h1.green COMEDY
+    section.block#landing
+        img#landing-heading(src='../images/landing_header.svg' alt='My horror is your comedy')
+    section.division#landing-division
+    section.block#about
+    section.division#about-division
