--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html(ng-app)
        meta(name='viewport' content='initial-scale=1')
        meta(name='description' content='Pyschadelicsnake fansite.')
        meta(name='keywords' content='youtube, hitbox, twitter, pyschadelicsnake, snake, stream')
-       link(rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Nunito|Roboto')
+       link(rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Nunito|Roboto|Open+Sans')
        link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css')
        link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
        link(rel='stylesheet' href='/bower_components/bootstrap-material-design/dist/css/ripples.css')
