--- a/views/header.jade
+++ b/views/header.jade
@@ -7,7 +7,7 @@ header
                 a.navbar-brand(href='#') SNAKE
             .navbar-collapse.collapse.navbar-responsive-collapse
                 ul.nav.navbar-nav
-                    li.active: a(href='javascript:void(0)') About
-                    li: a(href='javascript:void(0)') YouTube
-                    li: a(href='javascript:void(0)') Hitbox
-                    li: a(href='javascript:void(0)') Twitter
+                    li#about-button: a About
+                    li#youtube-button: a YouTube
+                    li#hitbox-button: a Hitbox
+                    li#twitter-button: a Twitter
