--- a/views/index.jade
+++ b/views/index.jade
@@ -6,3 +6,9 @@ block content
     section.division#landing-division
     section.block#about
     section.division#about-division
+    section.block#youtube
+    section.division#youtube-division
+    section.block#hitbox
+    section.division#hitbox-division
+    section.block#twitter
+    section.division#twitter-division
