Resized massive images to 1920x1080 and fixed nav shebang

--- a/views/header.jade
+++ b/views/header.jade
@@ -7,7 +7,7 @@ header
                 a.navbar-brand(href='#') SNAKE
             .navbar-collapse.collapse.navbar-responsive-collapse
                 ul.nav.navbar-nav
-                    li#about-button: a About
-                    li#youtube-button: a YouTube
-                    li#hitbox-button: a Hitbox
-                    li#twitter-button: a Twitter
+                    li#about-button: a(href='#!') About
+                    li#youtube-button: a(href='#!') YouTube
+                    li#hitbox-button: a(href='#!') Hitbox
+                    li#twitter-button: a(href='#!') Twitter
