--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,11 @@ block content
     section.block#about
     section.division#about-division
     section.block#youtube
+        include youtube
     section.division#youtube-division
     section.block#hitbox
+        include hitbox
     section.division#hitbox-division
     section.block#twitter
+        include twitter
     section.division#twitter-division
