--- a/views/header.jade
+++ b/views/header.jade
@@ -7,7 +7,7 @@ header
                 a.navbar-brand(href='#') SNAKE
             .navbar-collapse.collapse.navbar-responsive-collapse
                 ul.nav.navbar-nav
-                    li#about-button: a(href='#!') About
-                    li#youtube-button: a(href='#!') YouTube
-                    li#hitbox-button: a(href='#!') Hitbox
-                    li#twitter-button: a(href='#!') Twitter
+                    li#about-nav: a(href='#!/about') About
+                    li#youtube-nav: a(href='#!/youtube') YouTube
+                    li#hitbox-nav: a(href='#!/hitbox') Hitbox
+                    li#twitter-nav: a(href='#!/twitter') Twitter
