--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,10 @@ doctype html
 html(ng-app)
    head
        title Pyschadelic Snake
-       meta(name='viewport' content='initial-scale=1')
+       meta(name='viewport' content='width=device-width,initial-scale=1')
        meta(name='description' content='Pyschadelicsnake fansite.')
        meta(name='keywords' content='youtube, hitbox, twitter, pyschadelicsnake, snake, stream')
        link(rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Nunito|Roboto|Open+Sans')
-       link(rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize' +
-       '.min.css')
        link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min' +
        '.css')
        link(rel='stylesheet' type='text/css' href='/bower_components/bootstrap-material-design/dist/css/ripples.css')
@@ -29,4 +27,4 @@ html(ng-app)
        script(type='text/javascript' src='/javascripts/main.js')
        script(type='text/javascript').
            window.Scrolling.init();
-           clickCollapse();
+           init();
