--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,9 @@ html(ng-app)
        link(rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Nunito|Roboto|Open+Sans')
        link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min' +
        '.css')
-       link(rel='stylesheet' type='text/css' href='/bower_components/bootstrap-material-design/dist/css/ripples.css')
+       link(rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/css/ripples.min.css')
        link(rel='stylesheet' type='text/css'
-       href='/bower_components/bootstrap-material-design/dist/css/material-wfont.css')
+       href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/css/material-wfont.min.css')
        link(rel='stylesheet' type='text/css' href='/stylesheets/layout.css')
 
    body
@@ -19,11 +19,11 @@ html(ng-app)
        include footer
 
        // Scripts
-       script(type='text/javascript' src='/bower_components/jquery/dist/jquery.min.js')
-       script(type='text/javascript' src='/bower_components/angular/angular.js')
+       script(type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+       script(type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js')
        script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
-       script(type='text/javascript' src='/bower_components/bootstrap-material-design/dist/js/ripples.min.js')
-       script(type='text/javascript' src='/bower_components/bootstrap-material-design/dist/js/material.min.js')
+       script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/ripples.min.js')
+       script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/material.min.js')
        script(type='text/javascript' src='/javascripts/main.js')
        script(type='text/javascript').
            window.Scrolling.init();
