Reduced image filesize by switching to jpeg and added links to buttons

--- a/views/hitbox.jade
+++ b/views/hitbox.jade
@@ -7,4 +7,4 @@
                 h1 Fun with friends.
                 p.
                     Join our community for online multiplayer sessions, live walkthroughs, and real talk.
-                a.btn.btn-default.btn-primary#hitbox-button(href='javascript:void(0)') Hitbox
+                a.btn.btn-default.btn-primary#hitbox-button(href='http://www.hitbox.tv/pyschadelicsnake') Hitbox
