--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
         img#landing-heading(src='../images/landing_header.svg' alt='My horror is your comedy')
     section.division#landing-division
     section.block#about
+        include about
     section.division#about-division
     section.block#youtube
         include youtube
