--- a/views/twitter.jade
+++ b/views/twitter.jade
@@ -8,4 +8,4 @@
                 p.
                     Updates, straight from the horse's mouth. Musings and an alert whenever the live stream goes, well,
                     live.
-                a.btn.btn-default.btn-primary#twitter-button(href='javascript:void(0)') Twitter
+                a.btn.btn-default.btn-primary#twitter-button(href='https://twitter.com/Snakey_Bakey') Twitter
