--- a/views/youtube.jade
+++ b/views/youtube.jade
@@ -8,4 +8,4 @@
                 p.
                     Scares, laughs, and heartfelt endings. Check out my YouTube channel with walkthroughs ranging from
                     from Final Fantasy to Fatal Frame.
-                a.btn.btn-default.btn-primary#youtube-button(href='javascript:void(0)') YouTube
+                a.btn.btn-default.btn-primary#youtube-button(href='https://www.youtube.com/user/pyschadelicsnake') YouTube
