--- a/public/stylesheets/layout.styl
+++ b/public/stylesheets/layout.styl
@@ -19,8 +19,10 @@ black       = #111111
 white       = #eeeeee
 
 // #Universal
-html, body
-    height 100vh
+/*html, body
+    height 100vh*/
+body
+    font-size 16px
 .max-width
     margin  0 auto
     max-width  960px
@@ -71,7 +73,7 @@ nav
 
 // Landing
 #landing
-    background url("../images/fatal_frame_bg.png") no-repeat center center
+    background url("../images/fatal_frame_bg.jpg") no-repeat center center
     background-size cover
 #landing-heading
     display block
@@ -86,7 +88,7 @@ nav
 
 // About
 #about
-    background url('../images/mgs4_bg.png') no-repeat center center
+    background url('../images/mgs4_bg.jpg') no-repeat center center
     background-size cover
     top -40px
 #about-division
@@ -95,7 +97,7 @@ nav
 
 // YouTube
 #youtube
-    background url('../images/silent_hill_bg.png') no-repeat center center
+    background url('../images/silent_hill_bg.jpg') no-repeat center center
     background-size cover
     top -40px
 #youtube-logo
@@ -111,7 +113,7 @@ nav
 
 // Hitbox
 #hitbox
-    background url('../images/witcher_2_bg.png') no-repeat center center
+    background url('../images/witcher_2_bg.jpg') no-repeat center center
     background-size cover
     top -40px
 #hitbox-logo
@@ -127,7 +129,7 @@ nav
 
 // Twitter
 #twitter
-    background url('../images/resident_evil_bg.png') no-repeat center center
+    background url('../images/resident_evil_bg.jpg') no-repeat center center
     background-size cover
     top -40px
 #twitter-logo
