Added wulfcode contact info

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,2 +1,2 @@
 footer
-    p &copy; 2014 Pyschadelic Snake. Created by Wulfcode.
+    p &copy; 2014 Pyschadelic Snake. Created by #[a(href='mailto:contact@wulfcode.com') Wulfcode].
