Fixed issue where body blocks everything

--- a/public/stylesheets/layout.styl
+++ b/public/stylesheets/layout.styl
@@ -19,8 +19,8 @@ black       = #111111
 white       = #eeeeee
 
 // #Universal
-/*html, body
-    height 100vh*/
+html, body
+    height 100%
 body
     font-size 16px
 .max-width
